--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rnmapbox-ditch",
   "description": "A customized Mapbox React Native module designed to create tailored maps, specifically enhanced for the unique requirements of Ditch Navigation.",
-  "version": "1.2.0",
+  "version": "1.2.12",
   "publishConfig": {
     "access": "public"
   },
@@ -92,6 +92,7 @@
     "@testing-library/react-native": "^12.4.0",
     "@types/debounce": "^1.2.1",
     "@types/mapbox-gl": "^2.7.5",
+    "@types/react-dom": "^19.1.6",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
     "babel-jest": "^29.6.3",
@@ -115,6 +116,7 @@
     "prettier": "2.7.1",
     "react": "18.2.0",
     "react-docgen": "rnmapbox/react-docgen#rnmapbox-dist-react-docgen-v6",
+    "react-dom": "^19.1.0",
     "react-native": "^0.75.2",
     "react-native-builder-bob": "^0.23.1",
     "react-test-renderer": "18.2.0",
